# Azuos_APLICATION_GIT

./: README.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt
src/azuos_applied_flow/: main.py
src/azuos_applied_flow/crews/capacitation_crew/: capacitation_crew.py
src/azuos_applied_flow/crews/capacitation_crew/config/: agents.yaml  tasks.yaml
src/azuos_applied_flow/crews/content_crew/: content_crew.py
src/azuos_applied_flow/crews/content_crew/config/: agents.yaml  tasks.yaml
src/azuos_applied_flow/knowledge/form_questions/: form.yaml
src/azuos_applied_flow/models/: form.py  usuario.py
src/azuos_applied_flow/routes/: usuario_routes.py
src/azuos_applied_flow/services/: azuos_service.py
