[project]
name = "azuos_applied_flow"
version = "0.1.0"
description = "azuos_applied_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
kickoff = "azuos_applied_flow.main:kickoff"
run_crew = "azuos_applied_flow.main:kickoff"
plot = "azuos_applied_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
